# Project_Warehouse

./: CMakeLists.txt  README.md  main.cpp
files/reports/: description.txt
impl/: BinaryFileDeserializer.h  BinaryFileSerializer.h  CommandLineUI.h  ConsoleOrderGenerator.h  ConsoleProductGenerator.h  CsvSalesReportGenerator.h  FileDataManager.h  FileDeserializer.h  FileSerializer.h  InMemoryOrderRepository.h  InMemoryProductRepository.h
interfaces/: IDataManager.h  IDeserializer.h  IOrderGenerator.h  IOrderRepository.h  IProductGenerator.h  IProductRepository.h  ISalesReportGenerator.h  ISerializer.h  IUI.h
main_components/: Order.h  Product.h  SalesReport.h  Warehouse.h
